turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:16: error: type mismatch;
 found   : Array[Any]
 required: Array[Unit]
Note: Any >: Unit, but class Array is invariant in type T.
You may wish to investigate a wildcard type such as `_ >: Unit`. (SLS 3.2.10)
    makePattern(x)
                ^